# rbpo_prac

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml
idl/: TrayRpc.acf  TrayRpc.idl
include/: tray_config.h
installer/: Product.wxs
src/: app.rc  main.cpp  rbpo_rpc_constants.h  resource.h  service_main.cpp
src/rpc/: TrayRpc_c.c  TrayRpc_h.h  TrayRpc_s.c  rbpo_rpc.idl
src/service/: av_engine.cpp  av_engine.h  service_main.cpp  state.cpp  state.h
